@@ -34,6 +34,9 @@ Possibly implement a notice processor that will allow us to catch reporting
 of notice and warning messages generated by libpq.  These are normally
 just dumped to stdout.
 
+Add pg_trace and pg_untrace or equivalent to trace client/server
+communication to a debugging file stream.
+
 DONE Make configure script use or have an option to use "pg_config --includedir"
 to find the postgres includes and "pg_config --libdir" to find the postgres
 libraries.
